fix: remove horizontal scroll and adjust styles

--- a/news-api/src/components/view/news/news.css
+++ b/news-api/src/components/view/news/news.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     margin: 1rem auto;
     margin-bottom: 1.6%;
-    background: #fff;
+    background: #f7f4f4;
     color: #333;
     line-height: 1.4;
     font-family: Arial, sans-serif;
